# working-with-fastAPI

./: cars.json  carsharing.db  carsharing.py  db.py  pyproject.toml  schemas.py
routers/: cars.py
